[package]
name = "ret"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version ="4.4.6",features = ["derive", "env"]}  
tokio = { version = "1.44.2", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }  
http-body-util = "0.1.3"
hyper-util = { version = "0.1.11", features = ["tokio"] } 
shadowsocks = "1.23.0"
shadowsocks-crypto = "0.6.1"
futures = "0.3.31"
tokio-util = { version = "0.7", features = ["compat"] }
httparse = "1.10.1"
thiserror = "1.0.60"
url = "2.5.4"